# open3e

./: .dockerignore  .gitignore  LICENSE  Open3E2ioBroker.py  Open3EInfos.py  Open3EStatus.py  Open3E_depictSystem.py  Open3E_dids2json.py  Open3Eclass.py  Open3Eclient.py  Open3Ecodecs.py  Open3Edatapoints.json  Open3Edatapoints.py  Open3EdatapointsBat.py  Open3EdatapointsTcu.py  Open3EdatapointsVair.py  Open3EdatapointsVcal.py  Open3EdatapointsVcmu.py  Open3EdatapointsVdens.py  Open3EdatapointsVx3.py  Open3Edatapoints_writables.json  Open3Eenums.py  Open3Eerrors.py  README.md  args  argsscanallmqtt  config.json  dump.txt  printdatapoints.py  pyproject.toml  requirements.txt
.github/workflows/: integration-test.yml  test.yml  update_datapoints.yml
backup/: Open3EWarnings.py  Open3Eerrors.py
bestPractices/: Halterung_fuer_CAN_auf_USB_Adapter.stl  USB Adapter and udev.md
docker/: Dockerfile  Dockerfile_depictSystem  Dockerfile_open3e  README.md  docker-compose.yml
docs/: vg-features.txt  vg-patterns.md  vg20260521.md
orgdp/: Open3EdatapointsVair_org.py  Open3EdatapointsVdens_org.py  Open3EdatapointsVx3_org.py
src/open3e/: DidEnums.txt  Open3EInterface.py  Open3E_depictSysDev.py  Open3E_depictSystem.py  Open3E_dids2json.py  Open3E_dids2md.py  Open3E_json2dids.py  Open3E_topology.py  Open3Eclass.py  Open3Eclient.py  Open3Ecodecs.py  Open3Edatapoints.json  Open3Edatapoints.md  Open3Edatapoints.py  Open3EdatapointsVair.py  Open3EdatapointsVariants.json  Open3EdatapointsVariants.py  Open3EdatapointsVcal.py  Open3EdatapointsVdens.py  Open3EdatapointsVx3.py  Open3Edatapoints_writables.json  Open3Eenums.py  Open3Eservice77.py  Open3EudsBaseService77.py  Open3EudsClient.py  Open3EudsService77.py  __init__.py  printdatapoints.py  topology_analysis.py
src/open3e/config/: Config.py  Device.py  DeviceFeature.py
src/open3e/system/: Device.py  DeviceFeature.py  System.py  SystemInformation.py
src/open3e/web/: __init__.py  auth.py  can_discovery.py  can_engine.py  config_store.py  ha_discovery.py  launcher.py  mqtt_publisher.py  server.py  ws_manager.py
src/open3e/web/static/css/: app.css
src/open3e/web/static/js/: app.js  dashboard.js  datapoints.js
src/open3e/web/templates/: base.html  dashboard.html  datapoints.html  depict.html  login.html  settings.html  system.html  topology.html  write.html
tests/: test_codecs.py  test_depict_sysdev.py
tests/integration/: README.md  compose.yml  compose_ve3.yml  conftest.py  test_read.py  test_write.py
tests/integration/localdocker/mosquitto/: mosquitto.conf
tests/integration/localdocker/virtuale3/: Open3Edatapoints_6a1.py  devices.json
tests/integration/test_data/: read.json  write.json
tests/integration/test_data/device_config/: Open3Edatapoints.py  Open3Edatapoints_680.py  Open3Edatapoints_6a1.py  devices.json  devices_virtualE3.json  virtdata_680.txt  virtdata_6a1.txt
tests/integration/test_data/device_config/virtuale3/: Open3Edatapoints_680.py  Open3Edatapoints_6a1.py  devices.json  virtdata_680.txt
tests/integration/test_data/open3e_device_config/: Open3Edatapoints_680.py  Open3Edatapoints_6a1.py  devices.json
tests/util/: Open3EMqttClient.py  dataset.py  json_device_dataset_loader.py  open3e_cmd.py  open3e_cmd_wrapper.py  open3e_mqtt.py  wait.py
tests/web/: test_auth.py  test_can_discovery.py  test_can_engine.py  test_config_store.py  test_ha_discovery.py  test_mqtt_publisher.py  test_server.py  test_ws_manager.py
